...
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:maxLines="4" />

		<CheckBox
		    android:id="@+android:id/checkbox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:clickable="false"
		    android:focusable="false" />
        
    </TableRow>
...
