...

        <TextView
            android:id="@+id/brick_set_variable_prototype_view"
            style="@style/BrickPrototypeTextView" />

        <TextView
            android:id="@+id/brick_set_variable_edit_text"
            style="@style/BrickEditText"
            app:layout_inputType="number"
            app:layout_textField="true" />
    </org.catrobat.catroid.ui.BrickLayout >

</LinearLayout>
