...
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/formula_editor_keyboard_data"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_data"
            android:layout_span="2" />

        <Button
...
